feature: Criação de um livro funcionado